--- a/LABEL/Dockerfile
+++ b/LABEL/Dockerfile
@@ -1,6 +1,4 @@
 FROM almalinux:8
-RUN yum install nginx -y
-CMD ["nginx","-g","daemon off;"]
 LABEL TRAINING = "DevOps" \
-      TRAINER = "Shivakumar" \
+      TRAINER = "Sivakumar" \
       INSTITUTE = "Joindevops"
