--- a/LABEL/Dockerfile
+++ b/LABEL/Dockerfile
@@ -1,4 +1,5 @@
 FROM almalinux:8
 LABEL TRAINING="DevOps" \
       TRAINER="Sivakumar" \
-      INSTITUTE="Joindevops"
+      INSTITUTE="Joindevops" \
+      org.opencontainers.image.authors="info@Joindevops"
