--- a/ENV/Dockerfile
+++ b/ENV/Dockerfile
@@ -2,5 +2,5 @@ FROM almalinux:8
 RUN yum install nginx -y 
 ENV TRAINING="DevOps" \
     TRAINER="Sivakumar" \
-    INSTITUTE="Joindevops" \    
+    INSTITUTE="Joindevops"    
 CMD ["nginx","-g","daemon off;"]    
