--- a/ADD/Dockerfile
+++ b/ADD/Dockerfile
@@ -1,6 +1,6 @@
 FROM almalinux:8
 RUN yum install nginx -y 
 RUN rm -rf /usr/share/nginx/html/index.html
-COPY https://raw.githubusercontent.com/SuhasiniMaddineni/ansible/main/14-loops.yaml  
+ADD https://raw.githubusercontent.com/SuhasiniMaddineni/ansible/main/14-loops.yaml  
 /usr/share/nginx/html/index.html
 CMD ["nginx","-g","daemon off;"]
